Update do código

--- a/index.html
+++ b/index.html
@@ -10,19 +10,35 @@
     <main>
         <div class="calculator">
             <div class="info-data">
-                <div class="box-input">
-                    <label class="label-txt" for="textDay">DAY</label>
+                    <label class="label-txt" for="textDay">DIA
                     <input type="text" name="textDay" id="textDay" class="box-txt">
+                    </label>
 
-                    <label class="label-txt" for="textMonth">MONTH</label>
+                    <label class="label-txt" for="textMonth">MÊS
                     <input type="text" name="textDay" id="textMonth" class="box-txt">
+                    </label>
 
-                    <label class="label-txt" for="textYear">YEAR</label>
+                    <label class="label-txt" for="textYear">ANO
                     <input type="text" name="textDay" id="textYear" class="box-txt">
+                    </label>
+            </div>
+             <!-- <div class="button"></div> -->
+            <div class="data-result">
+                <div class="data">
+                    <div>
+                        <p class="number">25</p>
+                        <p class="text">anos</p>
+                    </div>
+                    <div>
+                        <p class="number">3</p>
+                        <p class="text">meses</p>
+                    </div>
+                    <div>
+                        <p class="number">26</p>
+                        <p class="text">dias</p>
+                    </div>
                 </div>
             </div>
-            <div class="data-result"></div>
-            <div class="button"></div>
         </div>
     </main>
 </body>
