--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
                     <label class="label-txt" for="textYear">ANO
                     <input type="text" name="textDay" id="textYear" class="box-txt">
                     </label>
+                    <div class="box-button">
+                        <div class="button">
+                            <img class="seta" src="img/icon-arrow.svg">
+                        </div>
+                    </div>
             </div>
-             <!-- <div class="button"></div> -->
             <div class="data-result">
                 <div class="data">
                     <div>
@@ -41,5 +45,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Coded by <a href="https://www.linkedin.com/in/andnanni" target="_blank">André Nanni</a> - 2023
+    </footer>
 </body>
 </html>
