--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="calculator">
-            <div class="info-data">
+            <form class="info-data">
                     <label class="label-txt" for="Day">DIA
                     <input type="text" name="Day" id="Day" placeholder="DD" class="box-txt">
                     <p class="infoJS" id="infoDay"></p>
@@ -26,9 +26,9 @@
                     </label>
 
                     <div class="box-button">
-                        <button class="button" type="button" onclick="CalInput()"><img src="img/icon-arrow.svg"></button>
+                        <button class="button" type="button"><img src="img/icon-arrow.svg"></button>
                     </div>
-            </div>
+            </form>
             <div class="data-result">
                 <div class="data">
                     <div>
